test/razor.test.views/errors/index.raz
<div>
    <h1>Error-Index</h1>
    @Html.partial("_nonExisting")
</div>